datasirpi-blog-service/k8s/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-api-ingress
  namespace: blog-service
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://datasirpi.com,https://admin.datasirpi.com"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  tls:
    - hosts:
        - blog-api.datasirpi.com
      secretName: blog-api-tls
  rules:
    - host: blog-api.datasirpi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog-api
                port:
                  number: 80
